--- a/index.html
+++ b/index.html
@@ -176,13 +176,83 @@
 
 		<!-- Our Specials section ends -->
 
+		<!-- Story learn section starts -->
+		<section class="story" id="story">
+			<div class="container">
+				<h3 class="heading">recent stories</h3>
+
+				<div class="story__wrapper">
+
+					<div class="story__left">
+						<div class="blog__items-wrapper">
+							<div class="blog__item">
+								<div class="blog__item-img">
+									<img src="images/menu-1.jpg" alt="">
+								</div>
+
+								<div class="blog__item-content">
+									<p><span>Desserts</span> <span>- created at -</span> </p>
+									<h3>delicious food</h3>
+									<a href="#">read more <i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>
+								</div>
+							</div>
+
+							<div class="blog__item">
+								<div class="blog__item-img">
+									<img src="images/menu-3.jpg" alt="">
+								</div>
+
+								<div class="blog__item-content">
+									<p><span>Desserts</span> <span>- created at -</span> </p>
+									<h3>delicious food</h3>
+									<a href="#">read more <i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>
+								</div>
+							</div>
+
+							<div class="blog__item">
+								<div class="blog__item-img">
+									<img src="images/menu-4.jpg" alt="">
+								</div>
+
+								<div class="blog__item-content">
+									<p><span>Desserts</span> <span>- created at -</span> </p>
+									<h3>delicious food</h3>
+									<a href="#">read more <i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>
+								</div>
+							</div>
+
+							<div class="blog__item">
+								<div class="blog__item-img">
+									<img src="images/menu-5.jpg" alt="">
+								</div>
+
+								<div class="blog__item-content">
+									<p><span>Desserts</span> <span>- created at -</span> </p>
+									<h3>delicious food</h3>
+									<a href="#">read more <i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>
+								</div>
+							</div>
+							
+						</div>
+					</div>
+
+					<div class="story__right">
+						<div class="story__item">
+								<img src="images/pexels-klaus-nielsen-6287244.jpg" alt="">
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- end story -->
+
 
 		<!-- medias section starts -->
 		<section class="media" id="media">
 			<div class="container">
 				<div class="media__wrapper">
 					<div class="media__one">
-						<img src="images/chef-2.jfif" alt="chef image-video">
+						<img src="images/pexels-klaus-nielsen-6287244.jpg" alt="chef image-video">
 						<a href="#" class="media__playbtn">
 							<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 58.752 58.752" style="enable-background:new 0 0 58.752 58.752;" xml:space="preserve"><g>
 								<path d="M52.524,23.925L12.507,0.824c-1.907-1.1-4.376-1.097-6.276,0C4.293,1.94,3.088,4.025,3.088,6.264v46.205   c0,2.24,1.204,4.325,3.131,5.435c0.953,0.555,2.042,0.848,3.149,0.848c1.104,0,2.192-0.292,3.141-0.843l40.017-23.103   c1.936-1.119,3.138-3.203,3.138-5.439C55.663,27.134,54.462,25.05,52.524,23.925z M49.524,29.612L9.504,52.716   c-0.082,0.047-0.18,0.052-0.279-0.005c-0.084-0.049-0.137-0.142-0.137-0.242V6.263c0-0.1,0.052-0.192,0.14-0.243   c0.042-0.025,0.09-0.038,0.139-0.038c0.051,0,0.099,0.013,0.142,0.038l40.01,23.098c0.089,0.052,0.145,0.147,0.145,0.249   C49.663,29.47,49.611,29.561,49.524,29.612z"/></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g><g></g>
@@ -237,70 +307,58 @@
 		<section class="recipe" id="recipe">
 			<div class="container">
 				<h3 class="sub__heading">recipes</h3>
-				<h2 class="heading">our recent blogs</h2>
-
-				<div class="recipe__filter">
-					<div>
-						<label for="filter">filter by category:</label>
-						<select id="filter">
-							<option selected disabled value="none">-- All --</option>
-							<option value="none">Desserts</option>
-							<option value="none">Appetizers</option>
-							<option value="none">Appetizers</option>
-						</select>
-					</div>
-					
-				</div>
-
+				<h2 class="heading">featured posts</h2>
 				<div class="recipe__wrapper">
-					<div class="recipe__box">
-						<div class="recipe__box-img">
-							<img src="images/menu-1.jpg" alt="">
+					<div class="blog__items-wrapper">
+						<div class="blog__item">
+							<div class="blog__item-img">
+								<img src="images/menu-1.jpg" alt="recipe image">
+							</div>
+
+							<div class="blog__item-content">
+								<p><span>Desserts</span> <span>- created at -</span> </p>
+								<h3>delicious food</h3>
+								<a href="#">read more <i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>
+							</div>
 						</div>
 
-						<div class="recipe__box-content">
-							<h3>delicious food</h3>
-							<p>Lorem, ipsum dolor sit, amet consectetur adipisicing elit. Error qui quisquam, a.</p>
-							<a href="#" class="btn btn__outline">view more</a>
+						<div class="blog__item">
+							<div class="blog__item-img">
+								<img src="images/menu-3.jpg" alt="">
+							</div>
+
+							<div class="blog__item-content">
+								<p><span>Desserts</span> <span>- created at -</span> </p>
+								<h3>delicious food</h3>
+								<a href="#">read more <i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>
+							</div>
 						</div>
+
+						<div class="blog__item">
+							<div class="blog__item-img">
+								<img src="images/menu-4.jpg" alt="">
+							</div>
+
+							<div class="blog__item-content">
+								<p><span>Desserts</span> <span>- created at -</span> </p>
+								<h3>delicious food</h3>
+								<a href="#">read more <i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>
+							</div>
+						</div>
+
+						<div class="blog__item">
+							<div class="blog__item-img">
+								<img src="images/menu-5.jpg" alt="">
+							</div>
+
+							<div class="blog__item-content">
+								<p><span>Desserts</span> <span>- created at -</span> </p>
+								<h3>delicious food</h3>
+								<a href="#">read more <i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>
+							</div>
+						</div>
+
 					</div>
-
-					<div class="recipe__box">
-						<div class="recipe__box-img">
-							<img src="images/menu-3.jpg" alt="">
-						</div>
-
-						<div class="recipe__box-content">
-							<h3>delicious food</h3>
-							<p>Lorem, ipsum dolor sit, amet consectetur adipisicing elit. Error qui quisquam, a.</p>
-							<a href="#" class="btn btn__outline">view more</a>
-						</div>
-					</div>
-
-					<div class="recipe__box">
-						<div class="recipe__box-img">
-							<img src="images/menu-4.jpg" alt="">
-						</div>
-
-						<div class="recipe__box-content">
-							<h3>delicious food</h3>
-							<p>Lorem, ipsum dolor sit, amet consectetur adipisicing elit. Error qui quisquam, a.</p>
-							<a href="#" class="btn btn__outline">view more</a>
-						</div>
-					</div>
-
-					<div class="recipe__box">
-						<div class="recipe__box-img">
-							<img src="images/menu-5.jpg" alt="">
-						</div>
-
-						<div class="recipe__box-content">
-							<h3>delicious food</h3>
-							<p>Lorem, ipsum dolor sit, amet consectetur adipisicing elit. Error qui quisquam, a.</p>
-							<a href="#" class="btn btn__outline">view more</a>
-						</div>
-					</div>
-
 				</div>
 			</div>
 
