Created Github pages for review

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
 					<div class="story__right">
 						<div class="story__item">
-								<img src="images/pexels-klaus-nielsen-6287244.jpg" alt="">
+								<img src="images/story.jpg" alt="">
 						</div>
 					</div>
 				</div>
