Added all recipe section and fixed media queries on stories section

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 						</div>
 
 						<div class="special__box-content">
-							<h3 class="special__box-title">special dishes</h3>
+							<h3 class="special__box-title">Strawberry Cake</h3>
 							<p class="special__box-desc">simple & delicious.</p>
 							<a href="" class="btn">see full recipe</a>
 						</div>
@@ -163,7 +163,7 @@
 						</div>
 
 						<div class="special__box-content">
-							<h3 class="special__box-title">special dishes</h3>
+							<h3 class="special__box-title">Chinesse Noodles</h3>
 							<p class="special__box-desc">simple & delicious.</p>
 							<a href="" class="btn">see full recipe</a>
 						</div>
@@ -238,7 +238,15 @@
 
 					<div class="story__right">
 						<div class="story__item">
-								<img src="images/story.jpg" alt="">
+							<div class="story__item-img">
+								<img src="images/story0.jpg" alt="">
+							</div>
+							<div class="story__item-content">
+								<span>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</span>
+								<h3>tasty & delicious foods</h3>
+							</div>
+							<a href="" class="story__btn">read more <i class="fa fa-arrow-right"></i></a>
+
 						</div>
 					</div>
 				</div>
@@ -365,6 +373,22 @@
 		</section>
 
 		<!-- recipes section ends -->
+
+
+
+		<!-- all section starts -->
+		<section id="all" class="all">
+			<div class="container">
+				<div class="all__wrapper">
+					<div class="all__content">
+						<h2>Gluten Free Recipies</h2>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus incidunt a commodi sed beatae magni, debitis voluptate nobis, sapiente eveniet, aliquam, tenetur quibusdam cupiditate voluptatem soluta ex fugiat voluptas reprehenderit.</p>
+						<a href="" class="btn">Discover All</a>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- all section ends -->
 
 
 
