Added Browse category section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<div class="home__wrapper">
 					<div class="home__content">
 						<!-- <span>our special dish</span> -->
-						<h1>taste your kitchen</h1>
+						<h1>taste your home</h1>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe placeat nisi mollitia.</p>
 						<a href="#recipe" class="btn btn__round">make yours</a>
 					</div>
@@ -242,8 +242,8 @@
 								<img src="images/story0.jpg" alt="">
 							</div>
 							<div class="story__item-content">
-								<span>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</span>
 								<h3>tasty & delicious foods</h3>
+								<span>- Food -</span>
 							</div>
 							<a href="" class="story__btn">read more <i class="fa fa-arrow-right"></i></a>
 
@@ -366,6 +366,30 @@
 							</div>
 						</div>
 
+						<div class="blog__item">
+							<div class="blog__item-img">
+								<img src="images/menu-6.jpg" alt="">
+							</div>
+
+							<div class="blog__item-content">
+								<p><span>Desserts</span> <span>- created at -</span> </p>
+								<h3>delicious food</h3>
+								<a href="#">read more <i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>
+							</div>
+						</div>
+
+						<div class="blog__item">
+							<div class="blog__item-img">
+								<img src="images/menu-1.jpg" alt="">
+							</div>
+
+							<div class="blog__item-content">
+								<p><span>Desserts</span> <span>- created at -</span> </p>
+								<h3>delicious food</h3>
+								<a href="#">read more <i class="fa fa-arrow-circle-right" aria-hidden="true"></i></a>
+							</div>
+						</div>
+
 					</div>
 				</div>
 			</div>
@@ -389,6 +413,57 @@
 			</div>
 		</section>
 		<!-- all section ends -->
+
+
+
+
+		<!-- Browse section starts -->
+		<section id="browse" class="browse">
+			<div class="container">
+				<h2 class="heading">browse our categories</h2>
+
+				<div class="browse__wrapper">
+					<div class="browse__items-wrapper">
+						<div class="browse__story">
+							<div class="story__item">
+								<div class="story__item-img">
+									<img src="images/story3.jpg" alt="">
+								</div>
+								<div class="story__item-content">
+									<h3>tasty & delicious foods</h3>
+									<span>- Food -</span>
+								</div>
+								<a href="" class="story__btn">read more <i class="fa fa-arrow-right"></i></a>
+
+							</div>
+
+							<div class="story__item">
+								<div class="story__item-img">
+									<img src="images/story4.jpg" alt="">
+								</div>
+								<div class="story__item-content">
+									<h3>tasty & delicious foods</h3>
+									<span>- lifestyle -</span>
+								</div>
+								<a href="" class="story__btn">read more <i class="fa fa-arrow-right"></i></a>
+
+							</div>
+						</div>
+
+						<div class="browse__category">
+							<div class="category__item">
+								<h3>categories</h3>
+								<p><a href="">foods</a></p>
+								<p><a href="">lifestyle</a></p>
+								<p><a href="">others</a></p>
+							</div>
+						
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- Browse section ends -->
 
 
 
